Smart notification + number of players connected/max + bug fix scrollbar

--- a/src/minecraft-server-status/mss.styles.css
+++ b/src/minecraft-server-status/mss.styles.css
@@ -57,7 +57,7 @@ body {
 #content {
   height: 100%;
   padding: 5px;
-  overflow: auto;
+  overflow-y: scroll;
 }
 #content > * {
   padding: 10px 0;
